<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/textNoteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note_title_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/spinnerCourses"
        app:layout_constraintStart_toStartOf="@+id/spinnerCourses"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCourses" />

    <Spinner
        android:id="@+id/spinnerCourses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textNoteText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note_text_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/spinnerCourses"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinnerCourses"
        app:layout_constraintTop_toBottomOf="@+id/textNoteTitle" />

    <TextView
        android:id="@+id/colorSelectorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Note Color"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/textNoteText"
        app:layout_constraintStart_toStartOf="parent"/>

    <!--THIS IS A COMPOUND COMPONENT

    <com.kotlin.notekeeper.ColorSelector
        android:id="@+id/colorSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/colorSelectorLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:colors="@array/note_color_array"/>
        -->

    <!-- SEEK BAR DEFAULT CODE
    <SeekBar
        android:id="@+id/coloSelector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:max="8"
        android:splitTrack="false"
        android:tickMark="@drawable/ic_menu_camera"
        android:tickMarkTint="@color/colorAccent"
        android:foregroundTint="@android:color/transparent"
        android:progressTint="@android:color/transparent"
        android:progressBackgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorSelectorLabel"/>
        -->

    <!--THIS IS A COMPOUND COMPONENT (SLIDER)

    <com.kotlin.notekeeper.ColorSlider
        android:id="@+id/colorSelector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorSelectorLabel"
        app:colors="@array/note_color_array"/>
        -->

    <com.kotlin.notekeeper.ColorDialView
        android:id="@+id/colorSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorSelectorLabel"
        app:colors="@array/note_color_array"/>

</androidx.constraintlayout.widget.ConstraintLayout>